<resources>
    <string name="app_name">Club deportivo</string>
    <string name="demo_mode_badge">MODO DEMO</string>
    <string name="welcome">Bienvenido</string>
    <string name="welcome_user">Bienvenido, %1$s</string>
    <string name="profile_icon_description">Icono de perfil</string>
    <string name="settings_title">Configuracion</string>
    <string name="club_identity_title">Datos del club</string>
    <string name="club_logo_description">Logo del club</string>
    <string name="select_club_logo">Seleccionar logo</string>
    <string name="club_name_label">Nombre</string>
    <string name="club_name_hint">Nombre del club</string>
    <string name="club_address_label">Domicilio</string>
    <string name="club_address_hint">Domicilio administrativo</string>
    <string name="club_phone_label">Telefono</string>
    <string name="club_phone_hint">Telefono de contacto</string>
    <string name="club_email_label">Email</string>
    <string name="club_email_hint">contacto@club.com</string>
    <string name="club_billing_title">Cuotas y vencimientos</string>
    <string name="club_currency_label">Moneda</string>
    <string name="monthly_fee_label">Cuota mensual</string>
    <string name="monthly_fee_hint">Importe de la cuota</string>
    <string name="due_day_label">Dia de vencimiento</string>
    <string name="due_day_hint">Del 1 al 28</string>
    <string name="grace_days_label">Dias de gracia</string>
    <string name="grace_days_hint">De 0 a 31</string>
    <string name="payment_methods_label">Medios de pago manuales</string>
    <string name="payment_cash">Efectivo</string>
    <string name="payment_transfer">Transferencia</string>
    <string name="payment_card">Tarjeta</string>
    <string name="save_club_configuration">Guardar configuracion</string>
    <string name="club_config_saved">Configuracion guardada</string>
    <string name="club_config_save_error">No se pudo guardar la configuracion</string>
    <string name="logout">Cerrar sesion</string>
    <string name="operation_monthly_fee">Cuota mensual</string>
    <string name="operation_join_member">Alta de socio y primera cuota</string>
    <string name="value_amount">Valor: %1$s</string>
    <string name="price_amount">Precio: %1$s</string>
    <string name="current_period_already_paid">El pago del periodo actual ya fue registrado</string>
    <string name="dashboard_income">Ingresos: %1$s</string>
    <string name="summary_quota_amount">Monto cuotas: %1$s</string>
    <string name="summary_activity_amount">Monto actividades: %1$s</string>
    <string name="summary_total_income">Ingresos totales: %1$s</string>
    <string name="estimated_debt">Deuda estimada: %1$s</string>
    <string name="administration_title">Administracion</string>
    <string name="manage_professors">Gestionar profesores</string>
    <string name="manage_activity_catalog">Gestionar catalogo de actividades</string>
    <string name="action_back">Volver</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_save">Guardar</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_deactivate">Dar de baja</string>
    <string name="professors_title">Profesores</string>
    <string name="activity_catalog_title">Catalogo de actividades</string>
    <string name="add_professor_description">Agregar profesor</string>
    <string name="add_activity_description">Agregar actividad</string>
    <string name="new_professor_title">Nuevo profesor</string>
    <string name="edit_professor_title">Editar profesor</string>
    <string name="new_activity_title">Nueva actividad</string>
    <string name="edit_activity_title">Editar actividad</string>
    <string name="dni_label">DNI</string>
    <string name="name_label">Nombre</string>
    <string name="last_name_label">Apellido</string>
    <string name="birth_date_label">Fecha de nacimiento</string>
    <string name="professional_title_label">Titulo o especialidad</string>
    <string name="phone_label">Telefono</string>
    <string name="email_label">Correo electronico</string>
    <string name="address_label">Domicilio</string>
    <string name="medical_record_current">Ficha medica al dia</string>
    <string name="professor_active">Profesor activo</string>
    <string name="activity_name_label">Nombre de la actividad</string>
    <string name="base_price_label">Precio base</string>
    <string name="price_with_currency">Precio (%1$s)</string>
    <string name="professor_display_name">%1$s, %2$s</string>
    <string name="professor_dni">DNI: %1$s</string>
    <string name="professor_title">Titulo: %1$s</string>
    <string name="professor_status_active">Estado: Activo</string>
    <string name="professor_status_inactive">Estado: Inactivo</string>
    <string name="activity_base_price">Precio base: %1$s</string>
</resources>
